--- a/PythonFundamentals.ipynb
+++ b/PythonFundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMe2K1zYX75i86oGVQPSSs6",
+      "authorship_tag": "ABX9TyOdwUvrSSaqLL7jRyb7+XI9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -615,12 +615,57 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x=5\n",
+        "y=3\n",
+        "print(x+y)"
+      ],
       "metadata": {
-        "id": "TsLSiHthSsGF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TsLSiHthSsGF",
+        "outputId": "bdf7d5c8-8eb1-4a4c-903b-ae97f63b6836"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=5\n",
+        "y=3\n",
+        "sum=x+y\n",
+        "sum"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JX7do_aRu1s3",
+        "outputId": "d01c2ec3-8d2c-4cd3-cc11-5f8e883a25a0"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -680,6 +725,34 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=7\n",
+        "y=8\n",
+        "x>y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "37uFoPTlu_Nk",
+        "outputId": "d3d1e09b-3991-46c7-f858-305332a341d9"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
     },
     {
       "cell_type": "markdown",
