--- a/Laboratory_No_2_2.ipynb
+++ b/Laboratory_No_2_2.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBaytKES+AOjRSzSYeDlUy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,12 +36,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "dFLmcfvBgnIh",
         "outputId": "2998ae56-d5c2-4d31-a473-dfc0805a206e"
       },
@@ -152,6 +150,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "STUDENT 1"
+      ],
+      "metadata": {
+        "id": "VpnjcqMXY1ii"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def get_grade(score, total, weight):\n",
@@ -242,24 +249,25 @@
         "  print(\"Midterm Grade: 3.00\")\n",
         "else:\n",
         "  print(\"Midterm Grade: FAILED\")\n",
-        "print(\"\\nFinal Grade:\", FG * 100)\n",
-        "if (FG * 100) >= 99 <100:\n",
+        "F = FG * 100\n",
+        "print(\"\\nFinal Grade:\", F)\n",
+        "if F >= 99 <100:\n",
         "  print(\"Final Grade: 1.00\")\n",
-        "if (FG * 100) >= 95 <98:\n",
+        "elif F >= 95 <98:\n",
         "  print(\"Final Grade: 1.25\")\n",
-        "if (FG * 100) >= 90 <94:\n",
+        "elif F >= 90 <94:\n",
         "  print(\"Final Grade: 1.50\")\n",
-        "if (FG * 100) >= 85 <89:\n",
+        "elif F >= 85 <89:\n",
         "  print(\"Final Grade: 1.75\")\n",
-        "if (FG * 100) >= 80 <84:\n",
+        "elif F >= 80 <84:\n",
         "  print(\"Final Grade: 2.00\")\n",
-        "if (FG * 100) >= 75 <79:\n",
+        "elif F >= 75 <79:\n",
         "  print(\"Final Grade: 2.25\")\n",
-        "if (FG * 100) >= 70 <74:\n",
+        "elif F >= 70 <74:\n",
         "  print(\"Final Grade: 2.50\")\n",
-        "if (FG * 100) >= 65 <69:\n",
+        "elif F >= 65 <69:\n",
         "  print(\"Final Grade: 2.75\")\n",
-        "if (FG * 100) >= 60 <64:\n",
+        "elif F >= 60 <64:\n",
         "  print(\"Final Grade: 3.00\")\n",
         "else:\n",
         "  print(\"Final Grade: FAILED\")\n"
@@ -269,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3bW9oSw5HHeS",
-        "outputId": "2e3c3b39-6c05-4ce6-8c8d-28fbbbbc2e67"
+        "outputId": "9a4807d3-c33b-476f-a01a-339367a92370"
       },
-      "execution_count": 68,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,51 +294,418 @@
             "\n",
             " Hands-on Activity Grade: 48.333333333333336\n",
             "\n",
-            " Enter (SCORE Prelim) Quiz: 88\n",
-            " Enter (TOTAL Prelim) Quiz: 100\n",
+            " Enter (SCORE Prelim) Quiz: 45\n",
+            " Enter (TOTAL Prelim) Quiz: 45\n",
             "\n",
-            " Quiz Grade: 26.4\n",
+            " Quiz Grade: 30.0\n",
             "\n",
-            " Enter (SCORE Prelim) Assignment: 98\n",
-            " Enter (TOTAL Prelim) Assignment: 100\n",
+            " Enter (SCORE Prelim) Assignment: 96\n",
+            " Enter (TOTAL Prelim) Assignment: 110\n",
             "\n",
-            " Assignment Grade: 19.6\n",
+            " Assignment Grade: 17.454545454545453\n",
             "\n",
-            " Prelim Class Standing: 94.33333333333334\n",
+            " Prelim Class Standing: 95.7878787878788\n",
             "\n",
-            " Enter (SCORE Prelim) Exam: 87\n",
-            " Enter (TOTAL Prelim) Exam: 90\n",
+            " Enter (SCORE Prelim) Exam: 97\n",
+            " Enter (TOTAL Prelim) Exam: 100\n",
             "\n",
-            " Prelim Exam Grade: 96.66666666666667\n",
+            " Prelim Exam Grade: 97.0\n",
             "\n",
-            "PRELIM GRADE: 95.5\n",
+            "PRELIM GRADE: 96.3939393939394\n",
             "\n",
-            "  Enter (MIDTERM GRADE): 96\n",
+            "  Enter (MIDTERM GRADE): 95.7\n",
             "\n",
-            "MIDTERM GRADE: 96.0\n",
+            "MIDTERM GRADE: 95.7\n",
             "\n",
-            "FINAL GRADE: 95.75\n",
+            "FINAL GRADE: 96.04696969696971\n",
             "PASSED\n",
             "\n",
             "SUMMARY:\n",
             "Student Name: MARINGAL\n",
             "Section: BSCPE 1A\n",
             "\n",
-            "Prelim Grade: 95.5\n",
+            "Prelim Grade: 96.3939393939394\n",
             "Prelim Grade: 1.25\n",
             "\n",
-            "Midterm Grade: 96.0\n",
+            "Midterm Grade: 95.7\n",
             "Midterm Grade: 1.25\n",
             "\n",
-            "Final Grade: 95.75\n",
-            "Final Grade: 1.25\n",
-            "Final Grade: 1.50\n",
-            "Final Grade: 1.75\n",
-            "Final Grade: 2.00\n",
-            "Final Grade: 2.25\n",
-            "Final Grade: 2.50\n",
-            "Final Grade: 2.75\n",
-            "Final Grade: 3.00\n"
+            "Final Grade: 96.04696969696971\n",
+            "Final Grade: 1.25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "STUDENT 2"
+      ],
+      "metadata": {
+        "id": "IwLiGv_cY5mN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_grade(score, total, weight):\n",
+        "    grade = (score / total) * weight\n",
+        "    if grade > weight:\n",
+        "        print(\"Invalid Input\")\n",
+        "        sys.exit()\n",
+        "    return grade\n",
+        "\n",
+        "name = input(\"Student Name: \")\n",
+        "section = input(\"Section: \")\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "HOA = get_grade(float(input(\" Enter (SCORE Prelim) Hands-on Activity: \")),\n",
+        "                float(input(\" Enter (TOTAL Prelim) Hands-on Activity: \")), 50)\n",
+        "print(\"\\n Hands-on Activity Grade:\", HOA)\n",
+        "\n",
+        "Q = get_grade(float(input(\"\\n Enter (SCORE Prelim) Quiz: \")),\n",
+        "              float(input(\" Enter (TOTAL Prelim) Quiz: \")), 30)\n",
+        "print(\"\\n Quiz Grade:\", Q)\n",
+        "\n",
+        "Ass = get_grade(float(input(\"\\n Enter (SCORE Prelim) Assignment: \")),\n",
+        "                float(input(\" Enter (TOTAL Prelim) Assignment: \")), 20)\n",
+        "print(\"\\n Assignment Grade:\", Ass)\n",
+        "\n",
+        "PCS = HOA + Q + Ass\n",
+        "print(\"\\n Prelim Class Standing:\", PCS)\n",
+        "\n",
+        "PE = get_grade(float(input(\"\\n Enter (SCORE Prelim) Exam: \")),\n",
+        "               float(input(\" Enter (TOTAL Prelim) Exam: \")), 100)\n",
+        "print(\"\\n Prelim Exam Grade:\", PE)\n",
+        "\n",
+        "PG = (PCS * 0.5) + (PE * 0.5)\n",
+        "print(\"\\nPRELIM GRADE:\", PG)\n",
+        "\n",
+        "MG = float(input(\"\\n  Enter (MIDTERM GRADE): \"))\n",
+        "if MG > 100:\n",
+        "    print(\"Invalid Input\")\n",
+        "    sys.exit()\n",
+        "print(\"\\nMIDTERM GRADE:\", MG)\n",
+        "\n",
+        "FG = ((PG / 100) * 0.5) + ((MG / 100) * 0.5)\n",
+        "print(\"\\nFINAL GRADE:\", FG * 100)\n",
+        "print(\"PASSED\" if FG * 100 >= 60 else \"FAILED\")\n",
+        "\n",
+        "print(\"\\nSUMMARY:\")\n",
+        "print(\"Student Name:\", name)\n",
+        "print(\"Section:\", section)\n",
+        "print(\"\\nPrelim Grade:\", PG)\n",
+        "if PG >= 99 <100:\n",
+        "  print(\"Prelim Grade: 1.00\")\n",
+        "elif PG >= 95 <98:\n",
+        "  print(\"Prelim Grade: 1.25\")\n",
+        "elif PG >= 90 <94:\n",
+        "  print(\"Prelim Grade: 1.50\")\n",
+        "elif PG >= 85 <89:\n",
+        "  print(\"Prelim Grade: 1.75\")\n",
+        "elif PG >= 80 <84:\n",
+        "  print(\"Prelim Grade: 2.00\")\n",
+        "elif PG >= 75 <79:\n",
+        "  print(\"Prelim Grade: 2.25\")\n",
+        "elif PG >= 70 <74:\n",
+        "  print(\"Prelim Grade: 2.50\")\n",
+        "elif PG >= 65 <69:\n",
+        "  print(\"Prelim Grade: 2.75\")\n",
+        "elif PG >= 60 <64:\n",
+        "  print(\"Prelim Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Prelim Grade: FAILED\")\n",
+        "print(\"\\nMidterm Grade:\", MG)\n",
+        "if MG >= 99 <100:\n",
+        "  print(\"Midterm Grade: 1.00\")\n",
+        "elif MG >= 95 <98:\n",
+        "  print(\"Midterm Grade: 1.25\")\n",
+        "elif MG >= 90 <94:\n",
+        "  print(\"Midterm Grade: 1.50\")\n",
+        "elif MG >= 85 <89:\n",
+        "  print(\"Midterm Grade: 1.75\")\n",
+        "elif MG >= 80 <84:\n",
+        "  print(\"Midterm Grade: 2.00\")\n",
+        "elif MG >= 75 <79:\n",
+        "  print(\"Midterm Grade: 2.25\")\n",
+        "elif MG >= 70 <74:\n",
+        "  print(\"Midterm Grade: 2.50\")\n",
+        "elif MG >= 65 <69:\n",
+        "  print(\"Midterm Grade: 2.75\")\n",
+        "elif MG >= 60 <64:\n",
+        "  print(\"Midterm Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Midterm Grade: FAILED\")\n",
+        "F = FG * 100\n",
+        "print(\"\\nFinal Grade:\", F)\n",
+        "if F >= 99 <100:\n",
+        "  print(\"Final Grade: 1.00\")\n",
+        "elif F >= 95 <98:\n",
+        "  print(\"Final Grade: 1.25\")\n",
+        "elif F >= 90 <94:\n",
+        "  print(\"Final Grade: 1.50\")\n",
+        "elif F >= 85 <89:\n",
+        "  print(\"Final Grade: 1.75\")\n",
+        "elif F >= 80 <84:\n",
+        "  print(\"Final Grade: 2.00\")\n",
+        "elif F >= 75 <79:\n",
+        "  print(\"Final Grade: 2.25\")\n",
+        "elif F >= 70 <74:\n",
+        "  print(\"Final Grade: 2.50\")\n",
+        "elif F >= 65 <69:\n",
+        "  print(\"Final Grade: 2.75\")\n",
+        "elif F >= 60 <64:\n",
+        "  print(\"Final Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Final Grade: FAILED\")\n"
+      ],
+      "metadata": {
+        "id": "Yl_Td3s7YxLR",
+        "outputId": "7bf5fcf2-6a7a-429c-a371-f423b0af1b4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student Name: JOHNFIL\n",
+            "Section: IE 1A\n",
+            "\n",
+            "\n",
+            " Enter (SCORE Prelim) Hands-on Activity: 78\n",
+            " Enter (TOTAL Prelim) Hands-on Activity: 90\n",
+            "\n",
+            " Hands-on Activity Grade: 43.333333333333336\n",
+            "\n",
+            " Enter (SCORE Prelim) Quiz: 37\n",
+            " Enter (TOTAL Prelim) Quiz: 45\n",
+            "\n",
+            " Quiz Grade: 24.666666666666664\n",
+            "\n",
+            " Enter (SCORE Prelim) Assignment: 97\n",
+            " Enter (TOTAL Prelim) Assignment: 110\n",
+            "\n",
+            " Assignment Grade: 17.636363636363637\n",
+            "\n",
+            " Prelim Class Standing: 85.63636363636364\n",
+            "\n",
+            " Enter (SCORE Prelim) Exam: 88\n",
+            " Enter (TOTAL Prelim) Exam: 100\n",
+            "\n",
+            " Prelim Exam Grade: 88.0\n",
+            "\n",
+            "PRELIM GRADE: 86.81818181818181\n",
+            "\n",
+            "  Enter (MIDTERM GRADE): 92.3\n",
+            "\n",
+            "MIDTERM GRADE: 92.3\n",
+            "\n",
+            "FINAL GRADE: 89.55909090909091\n",
+            "PASSED\n",
+            "\n",
+            "SUMMARY:\n",
+            "Student Name: JOHNFIL\n",
+            "Section: IE 1A\n",
+            "\n",
+            "Prelim Grade: 86.81818181818181\n",
+            "Prelim Grade: 1.75\n",
+            "\n",
+            "Midterm Grade: 92.3\n",
+            "Midterm Grade: 1.50\n",
+            "\n",
+            "Final Grade: 89.55909090909091\n",
+            "Final Grade: 1.75\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "STUDENT 3"
+      ],
+      "metadata": {
+        "id": "LXSXeLd_aQZy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_grade(score, total, weight):\n",
+        "    grade = (score / total) * weight\n",
+        "    if grade > weight:\n",
+        "        print(\"Invalid Input\")\n",
+        "        sys.exit()\n",
+        "    return grade\n",
+        "\n",
+        "name = input(\"Student Name: \")\n",
+        "section = input(\"Section: \")\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "HOA = get_grade(float(input(\" Enter (SCORE Prelim) Hands-on Activity: \")),\n",
+        "                float(input(\" Enter (TOTAL Prelim) Hands-on Activity: \")), 50)\n",
+        "print(\"\\n Hands-on Activity Grade:\", HOA)\n",
+        "\n",
+        "Q = get_grade(float(input(\"\\n Enter (SCORE Prelim) Quiz: \")),\n",
+        "              float(input(\" Enter (TOTAL Prelim) Quiz: \")), 30)\n",
+        "print(\"\\n Quiz Grade:\", Q)\n",
+        "\n",
+        "Ass = get_grade(float(input(\"\\n Enter (SCORE Prelim) Assignment: \")),\n",
+        "                float(input(\" Enter (TOTAL Prelim) Assignment: \")), 20)\n",
+        "print(\"\\n Assignment Grade:\", Ass)\n",
+        "\n",
+        "PCS = HOA + Q + Ass\n",
+        "print(\"\\n Prelim Class Standing:\", PCS)\n",
+        "\n",
+        "PE = get_grade(float(input(\"\\n Enter (SCORE Prelim) Exam: \")),\n",
+        "               float(input(\" Enter (TOTAL Prelim) Exam: \")), 100)\n",
+        "print(\"\\n Prelim Exam Grade:\", PE)\n",
+        "\n",
+        "PG = (PCS * 0.5) + (PE * 0.5)\n",
+        "print(\"\\nPRELIM GRADE:\", PG)\n",
+        "\n",
+        "MG = float(input(\"\\n  Enter (MIDTERM GRADE): \"))\n",
+        "if MG > 100:\n",
+        "    print(\"Invalid Input\")\n",
+        "    sys.exit()\n",
+        "print(\"\\nMIDTERM GRADE:\", MG)\n",
+        "\n",
+        "FG = ((PG / 100) * 0.5) + ((MG / 100) * 0.5)\n",
+        "print(\"\\nFINAL GRADE:\", FG * 100)\n",
+        "print(\"PASSED\" if FG * 100 >= 60 else \"FAILED\")\n",
+        "\n",
+        "print(\"\\nSUMMARY:\")\n",
+        "print(\"Student Name:\", name)\n",
+        "print(\"Section:\", section)\n",
+        "print(\"\\nPrelim Grade:\", PG)\n",
+        "if PG >= 99 <100:\n",
+        "  print(\"Prelim Grade: 1.00\")\n",
+        "elif PG >= 95 <98:\n",
+        "  print(\"Prelim Grade: 1.25\")\n",
+        "elif PG >= 90 <94:\n",
+        "  print(\"Prelim Grade: 1.50\")\n",
+        "elif PG >= 85 <89:\n",
+        "  print(\"Prelim Grade: 1.75\")\n",
+        "elif PG >= 80 <84:\n",
+        "  print(\"Prelim Grade: 2.00\")\n",
+        "elif PG >= 75 <79:\n",
+        "  print(\"Prelim Grade: 2.25\")\n",
+        "elif PG >= 70 <74:\n",
+        "  print(\"Prelim Grade: 2.50\")\n",
+        "elif PG >= 65 <69:\n",
+        "  print(\"Prelim Grade: 2.75\")\n",
+        "elif PG >= 60 <64:\n",
+        "  print(\"Prelim Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Prelim Grade: FAILED\")\n",
+        "print(\"\\nMidterm Grade:\", MG)\n",
+        "if MG >= 99 <100:\n",
+        "  print(\"Midterm Grade: 1.00\")\n",
+        "elif MG >= 95 <98:\n",
+        "  print(\"Midterm Grade: 1.25\")\n",
+        "elif MG >= 90 <94:\n",
+        "  print(\"Midterm Grade: 1.50\")\n",
+        "elif MG >= 85 <89:\n",
+        "  print(\"Midterm Grade: 1.75\")\n",
+        "elif MG >= 80 <84:\n",
+        "  print(\"Midterm Grade: 2.00\")\n",
+        "elif MG >= 75 <79:\n",
+        "  print(\"Midterm Grade: 2.25\")\n",
+        "elif MG >= 70 <74:\n",
+        "  print(\"Midterm Grade: 2.50\")\n",
+        "elif MG >= 65 <69:\n",
+        "  print(\"Midterm Grade: 2.75\")\n",
+        "elif MG >= 60 <64:\n",
+        "  print(\"Midterm Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Midterm Grade: FAILED\")\n",
+        "F = FG * 100\n",
+        "print(\"\\nFinal Grade:\", F)\n",
+        "if F >= 99 <100:\n",
+        "  print(\"Final Grade: 1.00\")\n",
+        "elif F >= 95 <98:\n",
+        "  print(\"Final Grade: 1.25\")\n",
+        "elif F >= 90 <94:\n",
+        "  print(\"Final Grade: 1.50\")\n",
+        "elif F >= 85 <89:\n",
+        "  print(\"Final Grade: 1.75\")\n",
+        "elif F >= 80 <84:\n",
+        "  print(\"Final Grade: 2.00\")\n",
+        "elif F >= 75 <79:\n",
+        "  print(\"Final Grade: 2.25\")\n",
+        "elif F >= 70 <74:\n",
+        "  print(\"Final Grade: 2.50\")\n",
+        "elif F >= 65 <69:\n",
+        "  print(\"Final Grade: 2.75\")\n",
+        "elif F >= 60 <64:\n",
+        "  print(\"Final Grade: 3.00\")\n",
+        "else:\n",
+        "  print(\"Final Grade: FAILED\")"
+      ],
+      "metadata": {
+        "id": "9p6srpasaStK",
+        "outputId": "af4a9f6c-be4f-48b9-caf9-3d3f64f36e27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student Name: AUSTRIA\n",
+            "Section: CpE 1A\n",
+            "\n",
+            "\n",
+            " Enter (SCORE Prelim) Hands-on Activity: 67\n",
+            " Enter (TOTAL Prelim) Hands-on Activity: 90\n",
+            "\n",
+            " Hands-on Activity Grade: 37.22222222222222\n",
+            "\n",
+            " Enter (SCORE Prelim) Quiz: 29\n",
+            " Enter (TOTAL Prelim) Quiz: 45\n",
+            "\n",
+            " Quiz Grade: 19.333333333333336\n",
+            "\n",
+            " Enter (SCORE Prelim) Assignment: 78\n",
+            " Enter (TOTAL Prelim) Assignment: 110\n",
+            "\n",
+            " Assignment Grade: 14.181818181818182\n",
+            "\n",
+            " Prelim Class Standing: 70.73737373737374\n",
+            "\n",
+            " Enter (SCORE Prelim) Exam: 56\n",
+            " Enter (TOTAL Prelim) Exam: 100\n",
+            "\n",
+            " Prelim Exam Grade: 56.00000000000001\n",
+            "\n",
+            "PRELIM GRADE: 63.36868686868688\n",
+            "\n",
+            "  Enter (MIDTERM GRADE): 75.7\n",
+            "\n",
+            "MIDTERM GRADE: 75.7\n",
+            "\n",
+            "FINAL GRADE: 69.53434343434344\n",
+            "PASSED\n",
+            "\n",
+            "SUMMARY:\n",
+            "Student Name: AUSTRIA\n",
+            "Section: CpE 1A\n",
+            "\n",
+            "Prelim Grade: 63.36868686868688\n",
+            "Prelim Grade: 3.00\n",
+            "\n",
+            "Midterm Grade: 75.7\n",
+            "Midterm Grade: 2.25\n",
+            "\n",
+            "Final Grade: 69.53434343434344\n",
+            "Final Grade: 2.75\n"
           ]
         }
       ]
